added second channel